--- a/Sockets-Servidor/MainWindow.xaml
+++ b/Sockets-Servidor/MainWindow.xaml
@@ -13,7 +13,7 @@
         <TextBlock Name="txtEstado" Text="Servidor detenido" FontSize="14" Margin="180,270,390,125"/>
         <ListBox x:Name="lstCochabamba" Margin="345,39,275,206"/>
         <TextBlock x:Name="txtPuerto" Text="Servidor detenido" FontSize="14" Margin="460,269,35,126"/>
-        <ListBox x:Name="lstPando" Margin="580,40,40,205"/>
+        <ListBox x:Name="lstPando" Margin="580,40,40,205" SelectionChanged="lstPando_SelectionChanged"/>
         <Button x:Name="btn_tempo" Content="IR" HorizontalAlignment="Left" Margin="655,329,0,0" VerticalAlignment="Top" Width="85" Click="btn_tempo_Click"/>
 
     </Grid>
