Actualización de MainWindow y agregado de histograma gráfico

--- a/Sockets-Servidor/MainWindow.xaml
+++ b/Sockets-Servidor/MainWindow.xaml
@@ -21,6 +21,7 @@
                     <GradientStop Color="#2B2A2A" Offset="0"/>
                 </LinearGradientBrush>
             </Border.Background>
+          
         </Border>
         <Button Width="30" Height="30"
         HorizontalAlignment="Right" VerticalAlignment="Top"
@@ -50,7 +51,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Cochabamba">
                         <Border Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -75,7 +76,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Beni">
                         <Border Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -100,7 +101,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Santa Cruz">
                         <Border Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -125,7 +126,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Pando">
                         <Border x:Name="BtnPando" Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -150,7 +151,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Chuquisaca">
                         <Border Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -175,7 +176,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="La paz">
                         <Border Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -200,7 +201,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Oruro">
                         <Border Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -225,7 +226,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Potosi">
                         <Border Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
@@ -250,7 +251,7 @@
                             <GradientStop Color="#699CCC" Offset="0.8"/>
                         </LinearGradientBrush>
                     </Border.Background>
-                    <Grid>
+                    <Grid MouseRightButtonDown="Grid_MouseRightButtonDown" Tag="Tarija">
                         <Border x:Name="BtnTarija" Background="White" Height="200" Width="180" HorizontalAlignment="Left" VerticalAlignment="Top" CornerRadius="20" Opacity="0.3" Margin="10,10,0,0"/>
                         <StackPanel HorizontalAlignment="Center">
                             <Image Source="image/router-2-128.png" Height="50" HorizontalAlignment="Center"/>
